// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture Component should render correctly 1`] = `
<picture>
  <source
    key="0"
    media="(min-width: 1280px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=1280"
  />
  <source
    key="1"
    media="(min-width: 992px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=992"
  />
  <source
    key="2"
    media="(min-width: 768px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=768"
  />
  <source
    key="3"
    media="(min-width: 480px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=480"
  />
  <BasicImg
    src="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=320"
    title="Scrum"
  />
</picture>
`;

exports[`Picture Component should render correctly and skip breakpoint large 1`] = `
<picture>
  <source
    key="0"
    media="(min-width: 992px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=992"
  />
  <source
    key="1"
    media="(min-width: 768px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=768"
  />
  <source
    key="2"
    media="(min-width: 480px)"
    srcSet="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=480"
  />
  <BasicImg
    src="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=320"
    title="Scrum"
  />
</picture>
`;

exports[`Picture Component should render correctly with ratio thumbnail 1`] = `
<BasicImg
  src="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=thumbnail&minWidth=77"
  title="Scrum"
/>
`;

exports[`Picture Component should render correctly without <sources> element 1`] = `
<picture>
  <BasicImg
    src="http://127.0.0.1:8080/caas/v1/coremedia/sites/caassiopeia-en-DE/media/2662/data?ratio=portrait_ratio1x1&minWidth=320"
    title="Scrum"
  />
</picture>
`;
